# wolf

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENCE.md  README.md  install_libraries.py  install_libraries.sh  linux-build.sh
.github/workflows/: dockerimage.yml  dockerimage_linux.yml  dockerimage_windows.yml
cmake/: build_libraries.cmake  compile_flags.cmake  install_definitions.cmake
cmake/build_wolf/: CMakeLists.txt
cmake/libs/: CMakeLists.txt
configs/: elapsed  parsers
docker/: Readme.md
docker/wolf_app/: linux.Dockerfile  windows.Dockerfile
docker/wolf_base/: linux.Dockerfile  windows.Dockerfile
docker/wolf_lib/: linux.Dockerfile  windows.Dockerfile
example_app/: CMakeLists.txt  README.md
example_app/cmake/: add_wolf.cmake
example_app/cmake/get_wolf/: CMakeLists.txt
example_app/src/: wolf_example.cpp
examples/: kafka_benchmark.cpp  re2.cpp
examples/app/: .gitignore  CMakeLists.txt  README.md
examples/app/cmake/get_wolf/: CMakeLists.txt
examples/app/include/: example_plugin.h
include/: CMakeLists.txt  wolf.h
include/base/: json.h  pipeline.h  pipeline_status.h  queue.h
include/base/options/: base_option.h  command.h  event.h  input.h  options.h
include/base/plugins/: base_plugin.h  mutexed_threaded_plugin.h  threaded_plugin.h
include/extras/: convert_time.h  get_executable_path.h  get_time.h  gzip.h  logger.h  validators.h
include/libs/: mi_tls.h
include/plugins/: collate.h  copy.h  drop.h  elapsed.h  regex.h  stats.h  time_sort.h
include/plugins/deserializers/: compressed.h  line.h  string.h
include/plugins/inputs/: cin.h  file.h  kafka.h  tcp.h
include/plugins/outputs/: cout.h  http.h  kafka.h  tcp.h
include/plugins/serializers/: line.h  string.h
lib/: CMakeLists.txt
linux/: Dockerfile  build-wolf.sh
src/: CMakeLists.txt  archive_reader.cpp  calf_parser.cpp  correlator.cpp  forwarder.cpp  gzip_test.cpp  json_to_influx.h  kafka.cpp  kafka_benchmark.cpp  little_stack_parser.cpp  main.cpp  metrics_forwarder.cpp  parser.cpp  re2.cpp  tcp_effective_receive.cpp  timer_tutorial.cpp  wolf.cpp  wolf.h
src/base/: json.h  json_to_influx.h  make.h  mutexed_plugin.h  mutexed_threaded_plugin.h  pipeline.cpp  pipeline.h  pipeline_status.cpp  pipeline_status.h  plugin.cpp  plugin.h  queue.cpp  queue.h  serializer.h  sleeper.cpp  sleeper.h  threaded_plugin.h
src/base/options/: base_option.h  command.h  constant.h  event.h  event_option.cpp  event_option.h  option.cpp  option.h  options.cpp  options.h
src/base/plugins/: base_plugin.cpp  base_plugin.h  mutexed_plugin.cpp  mutexed_plugin.h  mutexed_threaded_plugin.cpp  mutexed_threaded_plugin.h  plugin.cpp  plugin.h  threaded_plugin.cpp  threaded_plugin.h
src/extras/: convert_time.cpp  convert_time.h  extras.h  get_executable_path.cpp  get_executable_path.h  get_time.cpp  get_time.h  gzip.cpp  gzip.h  logger.cpp  logger.h  validators.h
src/libs/whereami/: whereami.c
src/plugins/: cin.h  collate.h  compress.h  copy.h  cout.h  drop.h  elapsed.h  file_in.h  file_out.h  filter.h  generator.h  http_out.h  istream_in.h  json_to_influx.h  json_to_string.h  kafka_in.h  kafka_out.h  lambda.h  regex.h  stats.h  stream_sort.h  string_to_json.h  tcp_in.h  tcp_out.h  time_sort.h
src/plugins/common/: kafka.h
src/plugins/deserializers/: compressed.cpp  compressed.h  line.cpp  line.h  string.cpp  string.h
src/plugins/inputs/: cin.h  file.h  file_in.h  generator.h  istream.h  kafka.h  kafka_in.h  stream.h  tcp.h
src/plugins/outputs/: cout.h  file.h  file_out.h  http.h  kafka.h  kafka_out.h  tcp.h
src/plugins/serializers/: compressed.cpp  compressed.h  influx.h  line.cpp  line.h  string.cpp  string.h
src/plugins/ysoft/: add_local_info.h  count_logs.h  get_elapsed_preevents.h  normalize_log4j2_logs.h  normalize_nlog_logs.h  normalize_serilog_logs.h
src/serializers/: compressed.cpp  compressed.h  deserialize.h  line.cpp  line.h  plain.h  serialize.h
src/whereami/: whereami.c
tests/: end_to_end_tests.py  parsers  run_all_tests.py
tests/end_to_end_tests/: calf_parser_test.py  correlator_test.py  parser_test.py  wolf_test_base.py
wolf/base/: pipeline.cpp  pipeline_status.cpp  pipeline_status.h  queue.h  sleeper.cpp  sleeper.h
wolf/base/options/: command.h  options.cpp  options.h
wolf/base/plugins/: base_plugin.h  threaded_plugin.h
wolf/extras/: convert_time.h  logger.h
wolf/plugins/: collate.h  filter.h  stream_sort.h  time_sort.h
wolf/plugins/deserializers/: compressed.cpp  line.cpp
wolf/plugins/inputs/: file.h  tcp.h
wolf/plugins/outputs/: cout.h  tcp.h
wolf/plugins/serializers/: compressed.cpp  compressed.h  line.cpp  line.h
wolf/plugins/ysoft/: add_local_info.h  get_elapsed_preevents.h  normalize_log4j2_logs.h
