if (${CMAKE_BUILD_TYPE} STREQUAL Debug)
    if (WIN32)
        set(WOLF_LIBS re2.lib cppkafka.lib rdkafka.lib zlibstaticd.lib stxxl_debug.lib rdkafka++.lib)
    elseif (UNIX)
        set(WOLF_LIBS libre2.a libcppkafka.a librdkafka.a libstxxl_debug.a libz.a librdkafka++.a)
    endif ()
else ()
    if (WIN32)
        set(WOLF_LIBS re2.lib cppkafka.lib rdkafka.lib zlibstatic.lib stxxl.lib rdkafka++.lib)
    elseif (UNIX)
        set(WOLF_LIBS libre2.a libcppkafka.a librdkafka.a libstxxl.a libz.a librdkafka++.a)
    endif ()
endif ()
list(TRANSFORM WOLF_LIBS PREPEND ${WOLF_LIBS_PATH}/lib/)
set(WOLF_LIB_HEADERS ${WOLF_LIBS_PATH}/include)

target_include_directories(wolf PRIVATE ${WOLF_PATH}/include)
target_include_directories(wolf SYSTEM PRIVATE ${WOLF_LIB_HEADERS})
target_link_libraries(wolf PRIVATE ${WOLF_LIBS})

set(WOLF_LIBS ${WOLF_LIBS} PARENT_SCOPE)
set(WOLF_LIB_HEADERS ${WOLF_LIB_HEADERS} PARENT_SCOPE)