set(TARGETS calf_parser metrics_forwarder correlator parser little_stack_parser forwarder)

foreach (executable ${TARGETS})
    add_executable(${executable} ${executable}.cpp)
    target_link_libraries(${executable} wolf)
endforeach ()

foreach (target ${TARGETS})
    set(WOLF_TARGET_DIR ${target}-${WOLF_SYSTEM})
    if (${CMAKE_BUILD_TYPE} STREQUAL Debug)
        set(WOLF_TARGET_DIR ${WOLF_TARGET_DIR}-debug)
    endif ()

    install(TARGETS ${target} DESTINATION ${WOLF_TARGET_DIR}/)
    if (${target} STREQUAL parser)
        install(FILES configs/parsers DESTINATION ${WOLF_TARGET_DIR}/)
        install(FILES configs/elapsed DESTINATION ${WOLF_TARGET_DIR}/)
    endif ()
    if (${target} STREQUAL little_stack_parser)
        install(FILES configs/parsers DESTINATION ${WOLF_TARGET_DIR}/)
        install(FILES configs/elapsed DESTINATION ${WOLF_TARGET_DIR}/)
    endif ()
endforeach ()